task of product is compeleted